# bevy-zoo-game

./: .aiignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/skills/speckit-analyze/: SKILL.md
.agents/skills/speckit-implement/: SKILL.md
.agents/skills/speckit-specify/: SKILL.md
.codex/: README.md  project-identity.md
.codex/memory/: project-memory.md
.codex/rules/: bevy-runtime-structure.md  codex-specify-workflow.md
.codex/skills/add-feature/: SKILL.md
.github/workflows/: export-web-build-to-github-pages.yml  perform-release.yml
.specify/: feature.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specs/: README.md
.specs/template/: README.md
bevy/crates/game/: Cargo.toml
bevy/crates/game/src/: main.rs
bevy/crates/game/src/runtime/plugins/: mod.rs
bevy/crates/game/src/runtime/resources/: mod.rs
bevy/crates/game/src/runtime/systems/: glb_mesh.rs  mod.rs
bevy/crates/game/src/tests/: model-test-output.md  model_tests.rs
scripts/main/: InstallDependencies.ps1  RunAppDesktopHotReload.ps1
scripts/other/: CompileApp.ps1  RunAppDesktop.ps1  RunAppWeb.ps1  RunTests.ps1  StopApp.ps1
specs/001-project-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-camera-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-debug-hud/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-card-inspection-poc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+51 files in other folders)
