[package]
name = "bevy-zoo-game"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
desktop-hot-reload = ["dep:dioxus-devtools"]
fast-dev = ["bevy/dynamic_linking"]

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy-persistent = { version = "0.10.0", features = ["json", "pretty"] }
bevy_tween.workspace = true
bevy_zoo_game_shared.workspace = true
dioxus-devtools = { version = "0.7.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
